...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Add Car-->
        <scene sceneID="R12-9B-cWK">
            <objects>
                <viewController title="Add Car" id="wae-Ke-HlV" customClass="CarFormViewController" customModule="Careo" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="GEf-ZU-kPT"/>
                        <viewControllerLayoutGuide type="bottom" id="g2p-5t-ENw"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="RJ5-PT-Zgg">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <rect key="frame" x="147" y="268" width="80" height="35"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="WJQ-7u-agf"/>
                                            <constraint firstAttribute="width" constant="80" id="Wa9-4K-Tzz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="17"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" red="0.61960784313725492" green="0.89411764705882346" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="saveAction:" destination="wae-Ke-HlV" eventType="touchUpInside" id="JqC-ca-RTP"/>
                                        </connections>
                                    </button>
...
