...
                            <constraint firstAttribute="trailing" secondItem="P5D-UK-f88" secondAttribute="trailing" id="HVn-WU-n4X"/>
                            <constraint firstItem="R20-wj-hfc" firstAttribute="top" secondItem="P5D-UK-f88" secondAttribute="bottom" id="S6f-DF-WmJ"/>
                            <constraint firstItem="P5D-UK-f88" firstAttribute="top" secondItem="A1p-UJ-2vv" secondAttribute="top" id="Y8L-pm-FGZ"/>
                            <constraint firstItem="P5D-UK-f88" firstAttribute="leading" secondItem="A1p-UJ-2vv" secondAttribute="leading" id="cFf-EI-fVg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Cars" id="JIz-mN-Uwm">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="TVn-xX-JSY">
                            <connections>
                                <segue destination="Vex-B2-3jj" kind="show" identifier="carFormSegue" id="mrt-lA-W8k"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
